# WASM_KLYNTAR_TESTS

./: .gitignore  Cargo.toml  foo.txt
ASSEMBLY_SCRIPT/: README.md  package.json  pnpm-lock.yaml
ASSEMBLY_SCRIPT/Add/: add.d.ts  add.js  package.json  use.js
ASSEMBLY_SCRIPT/CUSTOM_TABLE_PAY/: use.js
ASSEMBLY_SCRIPT/CYCLE_METER/: test.ts  use.js
ASSEMBLY_SCRIPT/ENERGY_METERED_WASM/: metered.wat  non_optimized.wat  use.js
ASSEMBLY_SCRIPT/EXPLOIT_TEST_NEGATIVE_ENERGY_VIA_BYTECODE_MODIFICATIONS/: Cargo.toml  README.md
ASSEMBLY_SCRIPT/EXPLOIT_TEST_NEGATIVE_ENERGY_VIA_BYTECODE_MODIFICATIONS/src/: exploit.js  lib.rs  negativeEnergy.wat  rename.wat  renameTest.js  saybyetoexploit.js  use.js
ASSEMBLY_SCRIPT/EXTERNAL_EXAMPLE/: metered.wat  test.ts  use.js
ASSEMBLY_SCRIPT/IMPORT_EXPORT_TEST/: optimization.ts  optimizations_test.md  test.ts  test2.ts  use.js
ASSEMBLY_SCRIPT/OBJECT_TO_JSON/: test.ts  use.js
ASSEMBLY_SCRIPT/OOP/: package.json  pnpm-lock.yaml  use.js  vector.ts
ASSEMBLY_SCRIPT/OOP_0/: test.ts  test.wat  use.js
ASSEMBLY_SCRIPT/OOP_1/: test.ts  use.js
ASSEMBLY_SCRIPT/OOP_2/: test.ts  test.wasm.map  use.js
ASSEMBLY_SCRIPT/ObjectMeter/: test.ts  use.js
ASSEMBLY_SCRIPT/PAY_FOR_IMPORTED_TO_WASM/: Cargo.toml
ASSEMBLY_SCRIPT/PAY_FOR_IMPORTED_TO_WASM/src/: injected.wat  lib.rs  use.js
ASSEMBLY_SCRIPT/RUST_TEST/src/: lib.rs  use.js
ASSEMBLY_SCRIPT/RUST_WITH_INJECTION/: Cargo.toml
ASSEMBLY_SCRIPT/RUST_WITH_INJECTION/src/: lib.rs  use.js
ASSEMBLY_SCRIPT/StringConcat/: concat.d.ts  concat.js  concat.ts  package.json  use.js
ASSEMBLY_SCRIPT/TEST_METERING/: add.ts  test.js  test_wasm_json.js
ASSEMBLY_SCRIPT/Test0/: test.js  test.ts
ASSEMBLY_SCRIPT/VECTOR/: test.ts  use.js
ASSEMBLY_SCRIPT/WASM_ED25519_RUST/: Cargo.toml
ASSEMBLY_SCRIPT/WASM_ED25519_RUST/src/: lib.rs  use.js
ASSEMBLY_SCRIPT/WASM_RUST_IMPORT_FROM_JS/: Cargo.toml
ASSEMBLY_SCRIPT/WASM_RUST_IMPORT_FROM_JS/src/: lib.rs  use.js
HTTP_WASM_TEST/src/: main.rs
TEST_VIA_RUSTUP_WASM_WASI_TARGET/: Cargo.toml
WASM_TEST/: Cargo.toml
src/: index.js  lib.rs  package.json  pnpm-lock.yaml
