############################## DEFAULT ##############################

[package]
name = "WASM_RUST_ED25519"
version = "0.1.0"
edition = "2021"


############################ DEPENDENCIES ###########################

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

#to force to work *-dalek. See https://stackoverflow.com/questions/65562447/the-trait-rand-corecryptorng-is-not-implemented-for-osrng
rand = {version="0.7.3",features = ["wasm-bindgen"]}

ed25519-dalek = {version="1.0.1"}
base64 = "0.13.0"
bincode = "1.3.3"

wasm-bindgen = "0.2.80"
js-sys = "0.3.57"

####### TO TEST HTTP CALLS

hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }





[lib]
crate-type=["cdylib"]


############################## OPTIMIZATION STUFF ##############################


# +Use RUSTFLAGS="-C target-cpu=native"

#Wasm settings

[package.metadata.wasm-pack.profile.release]
wasm-opt = false


[profile.release]
lto=true
codegen-units=1
incremental=true
strip=true

############# <<<<< FOR DEPENDENCIES >>>>> #############

[profile.release.package."*"]
#lto=true
codegen-units=1
incremental=true
strip=true

# No build scripts, proc macros, and their dependencies,so no more options need