############################## DEFAULT ##############################

[package]
name = "WASM_RUST_ED25519"
version = "0.1.0"
edition = "2021"

[lib]
crate-type=["cdylib"]

############################ DEPENDENCIES ###########################

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

#to force to work *-dalek. See https://stackoverflow.com/questions/65562447/the-trait-rand-corecryptorng-is-not-implemented-for-osrng
rand = {version="0.7.3",features = ["wasm-bindgen"]}

ed25519-dalek = {version="1.0.1"}
base64 = "0.13.0"
bincode = "1.3.3"

wasm-bindgen = "0.2.80"
js-sys = "0.3.57"


############################## OPTIMIZATION STUFF ##############################


# +Use RUSTFLAGS="-C target-cpu=native"

#Wasm settings
#See https://rustwasm.github.io/docs/wasm-pack/cargo-toml-configuration.html

[package.metadata.wasm-pack.profile.release]


[package.metadata.wasm-pack.profile.release.wasm-bindgen]
debug-js-glue = false
demangle-name-section = true
dwarf-debug-info = false



[profile.release]
lto=true
codegen-units=1
incremental=true
strip=true

############# <<<<< FOR DEPENDENCIES >>>>> #############

[profile.release.package."*"]

codegen-units=1
incremental=true
strip=true

# No build scripts, proc macros, and their dependencies,so no more options need